# iswat-ar-modeling

./: .gitignore  README.md  hydrad-pipeline-example.ipynb  pydrad-parsing-testing.ipynb  pyproject.toml
ar_12760/: build-skeleton.ipynb  bundle-selection.ipynb  data-download.ipynb
